syntax = "proto3";
import "Protos/common_models.proto";
option csharp_namespace = "Client.ChatApp.Protos";
package chat_message_pkg;


service ChatMessageRPCs {
  rpc Send(MessageReq) returns(common.ResultMsg) ;
}


message MessageReq{
	string MessageId = 1;
	string ChatId =2;
	string SenderId = 3;
	string Content = 4;
}